--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -17,7 +17,7 @@
     <!-- <script src="{{ url_for('static',  filename='/js/bloodhound.min.js') }}"></script> -->
     <!-- <script src="{{ url_for('static',  filename='/js/typeahead.bundle.min.js') }}"></script> -->
     <script src="{{ url_for('static',  filename='js/jquery.typeahead.js') }}"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='js/jquery.typeahead_edited.css') }}"> 
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='js/jquery.typeahead_edited.css') }}">
 
     <!-- Tom Select -->
     <link href="https://cdn.jsdelivr.net/npm/tom-select@1.7.6/dist/css/tom-select.css" rel="stylesheet">
@@ -41,13 +41,12 @@
             <div class="row">
                 {% if show_sidebar %}
                 <div class="col-md-8">
-                {% else %}
-                <div class="col-md-12">
-                {% endif %}
-                    {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %}
-                    <div class="alert alert-{{ category }} alert-dismissible fade show">
-                        {{ message }}
-                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                    {% else %}
+                    <div class="col-md-12">
+                        {% endif %} {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %}
+                        <div class="alert alert-{{ category }} alert-dismissible fade show">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
                     </div>
                     {% endfor %} {% endif %} {% endwith %} {% block content %} {% endblock %}
                 </div>
@@ -81,38 +80,59 @@
             {{ sidebar_form.country(class="form-select") }}
             <div class="col-md-5 d-flex align-content-end flex-wrap my-4">
                 <button class="btn btn-primary mx-2" type="submit">Query</button>
-                <a class="mx-2 align-self-end" href="{{ url_for('inventory.advanced_query') }}">Advanced query</a>
-            </div>
-        </form>
+                            <a class="mx-2 align-self-end" href="{{ url_for('inventory.advanced_query') }}">Advanced query</a>
+                        </div>
+                        </form>
 
-        {% endif %}
+                        {% endif %}
 
-        <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-            <div class="d-flex w-100 align-items-center justify-content-between">
-                <strong class="mb-1">List group item heading</strong>
-                <small>Wed</small>
-            </div>
-            <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-        </a>{% endif %}
+                        <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+                            <div class="d-flex w-100 align-items-center justify-content-between">
+                                <strong class="mb-1">List group item heading</strong>
+                                <small>Wed</small>
+                            </div>
+                            <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+                        </a>{% endif %}
 
-    </div>
-</div>
-                    {% endblock sidebar %}
+                    </div>
                 </div>
-                {% endif %}
+                {% endblock sidebar %}
             </div>
-        </main>
+            {% endif %}
+    </div>
+    </main>
     </div>
     <div class="container">
-        <footer class="pt-5 my-5border-top">
-            <p><a href="{{ url_for('main.about') }}">About</a> · <a href="http://opted.eu" target="_blank">OPTED Main Page</a> · <a href="http://twitter.com/OPTED_H2020" target="_blank"><i class="fab fa-twitter fs-5 color-twitter"></i></a> · <a href="http://www.researchgate.net/project/OPTED-H2020" target="_blank"><i class="fab fa-researchgate fs-5 color-researchgate"></i></a> · <a href="https://github.com/opted-eu" target="_blank"><i class="fab fa-github fs-5 color-github"></i></a></p>
-            <p class="text-muted ">This project has received funding from the European Union’s Horizon 2020 research & innovation programme under grant agreement No 951832. The document reflects only the authors’ views. The European Union is not liable for any use that may
-                be made of the information contained herein.</p>
+        <footer class="pt-5 my-5 border-top">
+            <div class="row">
+                <div class="col-6">
+                    <p>
+                        <a href="{{ url_for('main.about') }}">About</a> · <a href="{{ url_for('main.privacy') }}">Privacy Policy & Consent</a> · <a href="{{ url_for('main.imprint') }}">Imprint</a>
+                    </p>
+                </div>
+                <div class="col-6 text-end">
+                    <p>
+
+                        <a href="http://opted.eu" target="_blank">OPTED Main Page</a> · <a href="http://twitter.com/OPTED_H2020" target="_blank"><i class="fab fa-twitter fs-5 color-twitter"></i></a> · <a href="http://www.researchgate.net/project/OPTED-H2020"
+                            target="_blank"><i class="fab fa-researchgate fs-5 color-researchgate"></i></a> · <a href="https://github.com/opted-eu" target="_blank"><i class="fab fa-github fs-5 color-github"></i></a></p>
+                </div>
+            </div>
+            <div class="row">
+
+                <p class="text-muted ">This project has received funding from the European Union’s Horizon 2020 research & innovation programme under grant agreement No 951832. The document reflects only the authors’ views. The European Union is not liable for any use that
+                    may be made of the information contained herein.</p>
         </footer>
-    </div>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-    <script src="{{ url_for('static',  filename='js/search_everything.js') }}"></script>
+        </div>
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static',  filename='js/search_everything.js') }}"></script>
+        <!-- Enable Bootstrap Tooltips Globally -->
+        <script>
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+            var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+                return new bootstrap.Tooltip(tooltipTriggerEl)
+            });
+        </script>
 </body>
 
 </html>
