--- a/flaskinventory/templates/view/source.html
+++ b/flaskinventory/templates/view/source.html
@@ -25,17 +25,29 @@
             {% if entry.other_names %}
             <dt class="col-sm-3">Also known as</dt>
             <dd class="col-sm-9">{{ ", ".join(entry.other_names) }}
-            </dd>{% endif %} 
+            </dd>
+            {% endif %} 
             <dt class="col-sm-3">Channel</dt>
-            <dd class="col-sm-9 mb-4"><a href="{{ url_for('inventory.view_channel', unique_name=entry.channel.unique_name) }}">{{entry.channel.name}}</a> {% if entry.channel_url %} {% if entry.channel.unique_name == 'twitter' %}
-                <a class="mx-4" target="_blank" href="https://twitter.com/{{ entry.channel_url }}">
-                {% elif entry.channel.unique_name == 'instagram' %}
-                <a class="mx-4" target="_blank" href="https://instagram.com/{{ entry.channel_url }}">
-                    {% elif entry.channel.unique_name == 'website' %}
-                <a class="mx-4" target="_blank" href="{{ entry.channel_url }}">
+            <dd class="col-sm-9"><a href="{{ url_for('inventory.view_channel', unique_name=entry.channel.unique_name) }}">{{entry.channel.name}}</a> </dd>
+            {% if entry.channel_url %} 
+            <dt class="col-sm-3">Channel Link</dt>
+            <dd class="col-sm-9 mb-4">
+                    {% if entry.channel.unique_name == 'twitter' %}
+                    <a class="" target="_blank" href="https://twitter.com/{{ entry.channel_url }}">
+                    https://twitter.com/{{ entry.channel_url }}
+                    {% elif entry.channel.unique_name == 'instagram' %}
+                    <a class="" target="_blank" href="https://instagram.com/{{ entry.channel_url }}">
+                    https://instagram.com/{{ entry.channel_url }}
+                        {% elif entry.channel.unique_name == 'website' %}
+                    <a class="" target="_blank" href="{{ entry.channel_url }}">
+                    {{ entry.channel_url }}
                     {% elif entry.channel.unique_name == 'facebook' %}
-                <a class="mx-4" target="_blank" href="https://facebook.com/{{ entry.channel_url }}">
-                {% endif %}<i class="fas fa-external-link-alt mx-2" alt="External Link"></i>Open External</a> {% endif %}</dd>
+                    <a class="" target="_blank" href="https://facebook.com/{{ entry.channel_url }}">
+                    https://facebook.com/{{ entry.channel_url }}
+                    {% endif %}
+                    <i class="fas fa-external-link-alt mx-2" alt="External Link"></i></a>
+                    </dd>
+            {% endif %}
             {% if entry.verified_account %}
             <dt class="col-sm-3">Verified Account</dt>
             <dd class="col-sm-9 mb-4">{{ entry.verified_account }}</dd>
@@ -45,7 +57,7 @@
             <dd class="col-sm-9"><a href="https://www.wikidata.org/wiki/Q{{ entry.wikidataID }}" target="_blank">Q{{ entry.wikidataID }}</a>
             </dd>{% endif %} {% if entry.founded %}
             <dt class="col-sm-3">Founded</dt>
-            <dd class="col-sm-9">{{ entry.founded.strftime('%Y-%m-%d') }}
+            <dd class="col-sm-9">{{ entry.founded.strftime('%Y') }}
             </dd>{% endif %} {% if entry.transcript_kind %}
             <dt class="col-sm-3">Transcript</dt>
             <dd class="col-sm-9">{{ entry.transcript_kind }}</dd> {% endif %}
@@ -131,12 +143,22 @@
             <dt class="col-sm-3">Geographic Scope</dt>
             <dd class="col-sm-9">{{ entry.geographic_scope }}
             <dt class="col-sm-3">Countries</dt>
-            <dd class="col-sm-9">{% for country in entry.geographic_scope_countries %}
-                <a href="{{ url_for('inventory.view_country', unique_name=country.unique_name) }}">{{ country.name }}</a> {% endfor %}
+            <dd class="col-sm-9">
+                {% for country in entry.geographic_scope_countries %}
+                <a href="{{ url_for('inventory.view_country', unique_name=country.unique_name) }}">{{ country.name }}</a> 
+                {% endfor %}
             </dd>
             {% if entry.geographic_scope_subunit %}
             <dd class="col-sm-3">Subunit</dd>
-            <dd class="col-sm-9"><span class="">{{ entry.geographic_scope_subunit }}</span></dd>{% endif %} {% if entry.languages %}
+            <dd class="col-sm-9">
+                {% for subunit in entry.geographic_scope_subunit %}
+                <span class="">{{ subunit.name }}</span>
+                {% endfor %}
+                </dd>
+                
+            {% endif %} 
+            
+            {% if entry.languages %}
             <dt class="col-sm-3">Languages</dt>
             <dd class="col-sm-9"> {{ ",".join(entry.languages_pretty) }}</dd>{% endif %} {% if entry.audience_size %}
             <dt class="col-sm-3">Audience Size</dt>
@@ -219,3 +241,7 @@
 
 </article>
 {% endblock content %}
+
+{% block sidebar %} 
+    {% include "view/source_sidebar.html" %} 
+{% endblock sidebar %}
